[tool.poetry]
name = "langchain-book-chat"
version = "0.1.0"
description = ""
authors = ["Jase Hackman <jase.hackman@zapier.com>"]
readme = "README.md"
packages = [{include = "langchain_book_chat"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.4"
langchain = "^0.0.139"
chromadb = "^0.3.21"
unstructured = {extras = ["local-inference"], version = "^0.5.12"}
tiktoken = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
